$graphLookup doesn't desugar its subpipeline

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Query Integration
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      $graphLookup doesn't currently desugar its subpipelines when parsing with pipeline_factory::makePipeline. This causes us to hit a tassert if run against a view that has an extension stage in its definition. We should audit all pipeline_factory::makePipeline calls in DocumentSourceGraphLookup and GraphLookupStage and make sure they are making the correct desugaring choice.

            Assignee:
            Mariano Shaar
            Reporter:
            Alyssa Clark (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: