SERVER-118433 Desugar extensions in $graphLookup doc source and agg stage (#47188)

GitOrigin-RevId: 5dac51c09e6663d4e34f1da1612d9670ec3b801e