src/mongo/db/extension/host/load_native_vector_search_test.cpp
@@ -108,12 +108,7 @@ protected:
     static std::vector<BSONObj> desugarAndSerialize(
         const boost::intrusive_ptr<ExpressionContext>& expCtx, const BSONObj& stageSpec) {
         std::vector<BSONObj> spec{stageSpec};
-        auto pipe = pipeline_factory::makePipeline(spec,
-                                                   expCtx,
-                                                   {.optimize = false,
-                                                    .alreadyOptimized = false,
-                                                    .attachCursorSource = false,
-                                                    .desugar = true});
+        auto pipe = pipeline_factory::makePipeline(spec, expCtx, pipeline_factory::kDesugarOnly);
         ASSERT_TRUE(pipe);
         return pipe->serializeToBson();
     }
